- using FFmpeg instead of Mplayer to create VideoThumbnails
- using FFmpeg instead of Mplayer to gather media streams
- added default values for FILEINFO database and increased PROGRAM_DBVERSION
- indexing files is now about 4 to 5 times faster (by disabling AutoCommit)
- storing media information is now 0.5 times faster (by disabling AutoCommit)
- added support for MySQL

Version 0.63.0
08-07-2013

- removed Devel::Size Perl module from dependencies
- added a new DBVERSION meta-information to database - it allows pDLNA to only recreate the database if a new version of pDLNA comes with a new database structure (not every time a new version of pDLNA is installed)
- improved check to detect valid Mplayer installation (since Mplayer seems to change the location of the Mplayer string often) (thanks to lombao)
- enabled EnableGeneralStatistics feature for FreeBSD and readded process information on FreeBSD in the WebUI
- improved error handling in database module
- error log messages will get LogLevel 0 and will always be logged (changed LogLevel in various error messages over some Perl Modules)
- fixed a bug regarding the ConnectionManager HTTP response (thanks to lombao)
- moved from Ogg::Vorbis::Header to Ogg::Vorbis::Header::PurePerl and finally added code for tags from ogg files
- moved (again) from Net::Interface to IO::Interface (thx to shantanubhadoria) (issue #17)
- removed usage of Net::Address::Ethernet (handled by IO::Interface too)
- fixed a bug regarding delivering preview images
- moved from Digest::SHA1 to Digest::SHA and improved the PDLNA::Utils::get_randid function by using timestamp with milliseconds

Version 0.62.0
05-05-2013

- fixed issue #13 (https://github.com/geuma/pDLNA/issues/13) -aka- uninitialized value $request_line
- added support for transcoding all supported types of audio files to WMAv1
- added code to remove newly added ExcludeDirs and ExcludeItems from ContentLibrary
- added execution time to SQL query logging